# agent-swarm

./: README.md  pyproject.toml
src/claude_swarm/: cli.py  config.py  decomposer.py  orchestrator.py  quality_gate.py  runtime.py  session.py  types.py  ui.py
tests/: test_config.py  test_runtime.py
